--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -621,3 +621,22 @@ html.mobile-client
 
   .sb-user-search-submit
     margin: 0 0 0 4px
+
+
+// !Comm notes widget
+
+.comm-notes
+
+  li
+    padding: 10px 55px 10px 15px
+    position: relative
+
+    img
+      width: 36px
+      +border-radius(18px)
+      position: absolute
+      top: 13px
+      right: 10px
+
+    p
+      margin: 0
