--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -15,4 +15,4 @@
           =link_to( series_video_path(id:v.id)) do
             = image_tag( v.thumbnails.second.url )
           %div.info
-            =link_to(v.credits, publisher_video_path(id: v.publisher.id), {class: "publisher"})
+            =link_to(v.credits, publisher_video_path(id: v.id), {class: "publisher"})
