Reader javascript to coffeescript, secondary version loads only upon parallel open, other improvements.

--- a/app/assets/stylesheets/_full_screen.sass
+++ b/app/assets/stylesheets/_full_screen.sass
@@ -34,11 +34,8 @@
 
 .full_screen #reader_header
   @extend .clearfix
-  +box-shadow(inset #fff 0 1px 0 0)
-  +background-image(linear-gradient(#eeedeb, #dddcda))
-  background-color: #dddcda
-  border-bottom: 1px solid #cbc9cf
-  padding: 0 100px
+  background-color: #eeedeb
+  padding: 0
   position: fixed
   top: 0
   left: 0
