--- a/app/views/references/_js.html.haml
+++ b/app/views/references/_js.html.haml
@@ -19,23 +19,17 @@
     :plain
 
       jQuery(document).ready(function() {
-        window.reader = new Reader({
+
+        reader = new window.Reader({
           version: "#{reference[:version].to_s}",
           abbrev: "#{version.try(:abbreviation).downcase}",
           reference: "#{reference.to_param}",
           book: "#{reference[:book].to_s.downcase}",
           book_api: "#{reference[:book].sub(/[A-Z]+/) {|m| m.downcase}}",
           book_human: "#{version.books[reference[:book]].try(:human)}",
-          chapter: "#{reference[:chapter].to_s}",
-          font: "#{client_settings.reader_font}",
-          size: "#{client_settings.reader_font_size}",
-          trans_notes: #{client_settings.reader_trans_notes},
-          cross_refs: #{client_settings.reader_cross_refs},
-          show_highlights: #{client_settings.reader_highlights},
-          full_screen: #{fullscreen},
-          parallel_mode: #{parallel}
+          chapter: "#{reference[:chapter].to_s}"
         });
-        reader.init();
+        
         var page = window.app.getPage();
             page.setReader( reader );
       });
