Notification settings are now sent as proper true/false values, added likes to notification settings.

--- a/app/views/notifications/edit.html.haml
+++ b/app/views/notifications/edit.html.haml
@@ -2,6 +2,7 @@
   settings = {
     "moments"       => t('users.notifications.moments'),
     "comments"      => t('users.notifications.comments'),
+    "likes"         => t('users.notifications.likes'),
     "friendships"   => t('users.notifications.friendships'),
     "reading_plans" => t('users.notifications.reading_plans'),
     "badges"        => t('users.notifications.badges'),
