--- a/app/views/shared/_moments_load_more.html.haml
+++ b/app/views/shared/_moments_load_more.html.haml
@@ -1,6 +1,7 @@
 - url_params = [] if local_assigns[:url_params].nil?
+- paginated_end_day = 0 unless local_assigns.has_key? :paginated_end_day
 
-= link_to(t("moments.action.load more"),"#", id: "load-more", "data-page" => @page)
+= link_to(t("moments.action.load more"),"#", id: "load-more", "data-page" => @page, "data-paginated-end-day" => paginated_end_day)
 
 :javascript
   $('#load-more').click(function (ev) {
@@ -8,7 +9,8 @@
       ev.preventDefault();
       var pagination_link = $(ev.target);
       var next_page = pagination_link.data("page") + 1;
-      var request_url = "/#{resource}/_cards?page=" + next_page + "&#{url_params.join('&')}";
+      var paginated_end_day = pagination_link.data("paginated-end-day");
+      var request_url = "/#{resource}/_cards?paginated_end_day=" + paginated_end_day + "&page=" + next_page + "&#{url_params.join('&')}";
 
       $.ajax({
         type: "GET",
