--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -80,7 +80,7 @@ p
       width: 340px
 
     .cta
-      background: #91B164
+      background: #48a900
       color: #fff
       font-weight: bold
       font-size: 15px
@@ -280,7 +280,7 @@ p
       margin-top: -10px
 
   a
-    background: #91b164
+    background: #48a900
     display: block
     color: #fff
     font-weight: bold
@@ -332,7 +332,7 @@ p
   header #slideToNav
     display: none !important
 
-  header .popover-link  
+  header .popover-link
     display: none !important
 
   header #logo
@@ -487,7 +487,7 @@ p
           input[type="submit"]
             width: 100%
             margin: 10px 0 0 0
-            background: #91B164
+            background: #48a900
             color: #fff
             font-weight: bold
             font-size: 15px
@@ -606,3 +606,53 @@ p
 
   .bottom_cta .mobile_platforms
     margin-top: 2em !important
+
+// !Retina stuff
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2)
+
+  #hero
+    background: image-url("laptop@2x.jpg") no-repeat 500px 30px
+    background-size: 445px 223px
+
+  .hero_pics
+    background: image-url("bdc_pics@2x.jpg") repeat-x center top
+    background-size: 1750px 221px
+
+  #main article
+    ul
+      li.read_bible
+        background: image-url("read_bible_icon@2x.png") no-repeat center 0px
+        background-size: 188px 218px
+
+      li.study_bible
+        background: image-url("highlight_bible_icon@2x.png") no-repeat center 0px
+        background-size: 188px 218px
+
+      li.subscribe_bible
+        background: image-url("subscribe_bible_icon@2x.png") no-repeat center 0px
+        background-size: 188px 218px
+
+      .take_bible
+        background: image-url("take_bible_icon@2x.png") no-repeat center 0px
+        background-size: 188px 218px
+
+      li.read_bible div
+        background: #FFF image-url("read_bible_icon_m@2x.png") no-repeat 93% 20px
+        background-size: 80px
+
+      li.study_bible div
+        background: #FFF image-url("highlight_bible_icon_m@2x.png") no-repeat 93% 20px
+        background-size: 80px
+
+      li.subscribe_bible div
+        background: #FFF image-url("subscribe_bible_icon_m@2x.png") no-repeat 93% 20px
+        background-size: 80px
+
+      li.take_bible div
+        background: #FFF image-url("take_bible_icon_m.png@2x") no-repeat 93% 20px
+        background-size: 80px
+
+    .bottom_cta div div
+      background: image-url("bdc_mobile_icons@2x.png") no-repeat 0 0
+      background-size: 260px 40px
