Updated content on intro page. YV-71

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -18,7 +18,7 @@
   position: relative
 
 #main article.social-requests
-  padding-left: 0  
+  padding-left: 0
 
 #main article.social-feed,
 #main div.social-feed
@@ -321,14 +321,14 @@ body.transition .moment
     width: 48px
     +border-radius(48px)
 
-.timeline-avatar 
+.timeline-avatar
   +border-radius(30px)
   padding: 3px
   box-shadow: 0 1px 2px #bbb
   float: left
   background-color: #fff
 
-  img   
+  img
     height: 24px
     width: 24px
     +border-radius(24px)
@@ -528,7 +528,7 @@ body.transition .moment
     display: none
 
   .content-action.expanded .more
-    display: none 
+    display: none
 
   .content-action.expanded .less
     display: block
@@ -936,9 +936,9 @@ body.transition .moment
     li
       display: block
       height: 28px
-      padding: 0 0 0 35px      
-      line-height: 34px    
-      background: image-url("social-actions-sprite.png") no-repeat  
+      padding: 0 0 0 35px
+      line-height: 34px
+      background: image-url("social-actions-sprite.png") no-repeat
 
     li.action-like
       background-position: 10px -82px
@@ -950,15 +950,15 @@ body.transition .moment
 
 #main article.social-intro
   background-color: transparent
-  padding: 50px 0 20px 50px
+  padding: 30px 0 20px 50px
   position: relative
 
   .intro-moment
     width: 566px
-    background: image-url("intro-moments-top.png") no-repeat top right
+    background: image-url("intro-moments-btm.png") no-repeat bottom right
 
   .intro-moment-box
-    background: image-url("intro-moments-btm.png") no-repeat bottom right
+    background: image-url("intro-moments-top.png") no-repeat top right
 
   .intro-title
     font-size: 63px
@@ -971,10 +971,7 @@ body.transition .moment
     width: 350px
 
   .moment-actions-like
-    display: block !important
-
-    a
-      padding: 5px 0 0 52px
+    margin: 0 10px 0 0
 
   .moment-comments-textarea
     color: #888
