--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -219,21 +219,143 @@
             = link_to(t("registration.with email"), sign_up_path, {id: "signup-via-email", class: 'action_button_blue'})
 
 
-
-%script#moment-bookmark-tmpl{type:"text/x-handlebars-template"}
+%script#moment-votd-tmpl{type:"text/x-handlebars-template"}
   :plain
-    <div class="moment" data-moment-id="{{id}}">
-      <div class="moment-top">
-        <div class="moment-bm">
-          <span class="moment-icon"></span>
-          <span class="moment-avatar">
-            <a href="#">User Link</a>
-          </span>
+    <div class="moment">
+      <div class="moment-vod" data-references="votd.references.join('+')">
+        
+        <span class="moment-icon">&nbsp;</span>
+        
+        <div class="moment-vod-calendar">
+          <div class="moment-vod-calendar-date">
+            {{week_day}}
+          </div>
+          <div class="moment-vod-calendar-img">
+            #{image_tag "moment-vod-calendar-img.png"}
+          </div>
         </div>
+
+        <span class="moment-time">
+          {{created_dt}}
+        </span>
+
+        <div class="moment-vod-title">
+          #{t("moments.vod.title")}
+        </div>
+
+        {{{verse_html}}}
+
+        <ul class="moment-vod-list">
+          {{#each recent_versions}}
+            <li class="btn" data-version-id="{{id}}" >{{abbrev}}</li>
+          {{/each}}
+        </ul>
+
       </div>
     </div>
 
 
+%script#moment-highlight-tmpl{type:"text/x-handlebars-template"}
+  :plain
+    <div class="moment" data-moment-id="{{id}}" data-moment-path="{{to_path}}" data-str-delete-confirm="Are you sure you want to delete this?">
+      <div class="moment-top">
+        <div class="moment-hi">
+          <span class="moment-icon"></span>
+          <span class="moment-avatar">
+            <a href="{{user.path}}">
+              <img src="{{avatar}}" />
+            </a>
+          </span>
+          <span class="moment-time">
+            {{created_dt}}
+          </span>
+          <h2 class="moment-hi-text">
+            <a href="{{path}}" class="moment-title-link">
+              {{{moment_title}}}
+            </a>
+          </h2>
+
+          {{{verse_html}}}
+
+        </div>
+      </div>
+      <div class="moment-btm"></div>
+    </div>
+
+
+
+%script#moment-bookmark-tmpl{type:"text/x-handlebars-template"}
+  :plain
+    <div class="moment" data-moment-id="{{id}}" data-moment-path="{{to_path}}" data-str-delete-confirm="Are you sure you want to delete this?">
+      <div class="moment-top">
+        <div class="moment-bm">
+          <span class="moment-icon"></span>
+          <span class="moment-avatar">
+            <a href="{{user.path}}">
+              <img src="{{avatar}}" />
+            </a>
+          </span>
+          <span class="moment-time">
+            {{created_dt}}
+          </span>
+          <h2 class="moment-bm-text">
+            <a href="{{path}}" class="moment-title-link">
+              {{{moment_title}}}
+            </a>
+          </h2>
+
+          {{{verse_html}}}
+
+          <p class="moment-bm-labels">
+            <a href="#">Label</a>
+            <a href="#">Label</a>
+            <a href="#">Label</a>
+          </p>
+
+        </div>
+      </div>
+      <div class="moment-btm"></div>
+    </div>
+
+
+%script#moment-note-tmpl{type:"text/x-handlebars-template"}
+  :plain
+    <div class="moment" data-moment-id="{{id}}" data-moment-path="{{to_path}}" data-str-delete-confirm="Are you sure you want to delete this?">
+      <div class="moment-top">
+        <div class="moment-no">
+          <span class="moment-icon"></span>
+          
+          <span class="moment-avatar">
+            <a href="{{user.path}}">
+              <img src="{{avatar}}" />
+            </a>
+          </span>
+
+          <span class="moment-time">
+            {{status}} • 
+            {{created_dt}}
+          </span>
+          <h2 class="moment-no-text">
+            <a href="{{path}}" class="moment-title-link">
+              {{{moment_title}}}
+            </a>
+          </h2>
+
+          <div class="moment-no-note">
+            <p class="moment-no-note-title">{{title}}</p>
+            <p class="moment-no-note-text">{{content}}</p>
+          </div>
+          
+          <div class="moment-no-refs">
+            <a href="#">John 1:1</a>
+            <a href="#">John 1:1</a>
+            <a href="#">John 1:1</a>
+          </div>
+
+        </div>
+      </div>
+      <div class="moment-btm"></div>
+    </div>
 
 %script#moment-verse-tmpl{type:"text/x-handlebars-template"}
   :plain
