--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -298,6 +298,7 @@ body.transition .moment
   margin-left: 10px
   padding: 7px 10px
   +box-shadow(none)
+  resize: none
 
 
 // !Moment badge positioning
