Improve generic / system moments, implement more client side moment functionality.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -376,13 +376,17 @@ body.transition .moment
     float: left
     width: 300px
     margin-bottom: 15px
+    font:
+      size: 16px
+      weight: normal
+    line-height: 1.1em
+    padding: 5px 0 0 10px
+    color: #444
 
     a
       font:
         size: 16px
         weight: normal
-      line-height: 1.1em
-      padding: 5px 0 0 10px
       color: #444
       display: block
 
@@ -392,18 +396,6 @@ body.transition .moment
   .moment-dl-text
     b
       display: block
-
-
-// System moment overrides
-
-.moment-sys
-  .moment-time
-    float: none
-    padding: 5px
-
-.moment-sys-text
-  flot: none
-
 
 // Moments that have verses (currently bookmark and highlight)
 
@@ -789,6 +781,9 @@ body.transition .moment
 
   .moment-icon
     background-position: -416px 0
+
+  .moment-sys-image img
+    width: 100%
 
 
 // !PSA moment
