--- a/app/views/moments/index.html.haml
+++ b/app/views/moments/index.html.haml
@@ -1,12 +1,8 @@
 - @sidebar = false
 
 .social-feed-wrap
-  .social-feed
-    = #render partial: "moments/cta/find_friends"
-    = render partial: "moments/cta/profile" if current_user.profile_incomplete?
-    = #render partial: "moments/cta/sharing"
-    = render partial: "moments/cards", locals: {moments: @moments, comments_displayed: true}
-
-
-- if @feed.next_page
-  = render partial: "shared/moments_load_more", locals: {resource: "moments", paginated_end_day: @feed.paginated_end_day}
+  :javascript
+    $(document).ready(function(){
+      var feed = new Moments.Feed()
+    });
+    
