Pagination tweaks, refresh wookmark properly, etc.

--- a/app/views/moments/index.html.haml
+++ b/app/views/moments/index.html.haml
@@ -1,8 +1,7 @@
 - @sidebar = false
 
-.social-feed-wrap
+.social-feed-wrap{"data-str-load-more" => t("moments.action.load more")}
   :javascript
     $(document).ready(function(){
       var feed = new Moments.Feed()
     });
-    
